# exocortex

./: .gitignore  AGENTS.md  README.md  arch.md  pyproject.toml
config/: targets.example.toml
docs/bootstrap/: manual-validation.md  roadmap.md
docs/howto/: README.md  deerflow-proof-of-life.md  gastown-proof-of-life.md  openclaw-proof-of-life.md
docs/superpowers/specs/: 2026-03-18-exocortex-architecture-design.md
src/exocortex/: __main__.py
src/exocortex/agents/: cli.py
src/exocortex/api/: app.py
src/exocortex/api/routes/: graphs.py  targets.py
src/exocortex/core/: checkpoint.py  conditions.py  engine.py  graph.py  injection_models.py  models.py  state.py
src/exocortex/targets/: __init__.py  adapters.py  cli.py  host.py  models.py  registry.py  service.py  terminal.py
tests/integration/: test_api.py  test_checkpoint_integration.py  test_targets_api.py
tests/unit/: test_checkpoint.py  test_cli.py  test_conditions.py  test_engine.py  test_graph.py  test_state.py  test_target_host.py  test_target_registry.py  test_target_service.py
